--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -27,7 +27,7 @@ The state serialization is then defined as the dictionary built from the amalgam
       }{
         \tup{\rh¬headerhash, \rh¬accoutlogsuperpeak, \rh¬stateroot, \rh¬reportedpackagehashes} \orderedin \recenthistory
       }}},
-      \Fmmrencode{\beefybelt}
+      \mmrencode{\beefybelt}
     } \;, \\
     &&C(4) &\mapsto \encode{
       \pendingset,
@@ -293,9 +293,9 @@ We define the \textsc{mmb} append function $\mmrappend$ as:
   \end{aligned}
 \end{equation}
 
-We define the \textsc{mmr} encoding function as $\mmrencode$:
+We define the \textsc{mmr} encoding function as $\fnmmrencode$:
 \begin{equation}
-  \mmrencode\colon\deffunc{
+  \fnmmrencode\colon\deffunc{
     \sequence{\optional{\hash}} &\to \blob \\
     \mathbf{b} &\mapsto \encode{\var{[\maybe{x}\mid x \orderedin \mathbf{b}]}}
   }
